--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "fathon-modal",
-  "version": "0.0.1",
-  "description": "A deep modal.",
+  "version": "1.0.0",
+  "description": "A modal concept which aims to give a sense of depth between the page and modal layers.",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "adonis serve --dev",
-    "test": "node ace test",
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run development -- --watch",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "start": "http-server ./dist"
   },
   "repository": {
     "type": "git",
@@ -19,7 +17,8 @@
   },
   "keywords": [
     "modal",
-    "js"
+    "js",
+    "deep"
   ],
   "author": "Lucas Reis <lucas@programmer.com.br>",
   "license": "ISC",
