--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fathon-modal",
-  "version": "1.0.0",
+  "name": "fathom-modal",
+  "version": "1.0.1",
   "description": "A modal concept which aims to give a sense of depth between the page and modal layers.",
   "main": "index.js",
   "scripts": {
